# HomeEnergySystemDesigner

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
backend/: README.md
backend/app/: __init__.py  main.py
backend/app/config/: settings.py
backend/app/schemas/: analysis.py
backend/app/services/: analysis_service.py
deprecated/notebooks/: solar_panel_design.ipynb
docs/features/: heat_pump_feature.md  solar_panel_feature.md
docs/spec/: implementation_backlog.md  migration_strategy.md  openapi_contract_review.md  progress_checklist.md  technical_product_spec.md
docs/spec/input/: part_01_projectvisie.md  part_02_functionele_scope.md  part_03_domeinmodel.md  part_04_systeemarchitectuur.md  part_05_gebruikersflow.md  part_06_functionele_modules.md  part_07_business_logica.md  part_08_configuratie_en_gebruikersinstellingen.md  part_09_validatie_en_kwaliteitscontrole.md  part_10_ux_ui_structuur.md  part_11_api_ontwerp.md  part_12_code_architectuur.md  part_13_development_roadmap.md  part_14_datamodel_en_objectstructuur.md  part_15_berekeningsmodellen_en_formules.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/data/: mockData.ts
frontend/src/screens/: AnalysisNotebookPage.tsx  AnalysisScreen.tsx  (+8 more)
notebooks/: heat_pump_design.ipynb  integrated_energy_design.ipynb  solar_panel_design.ipynb
src/home_energy/: __init__.py  domain.py
tests/: test_api.py  test_heat_pump.py  test_solar.py
(+21 files in other folders)
